# nutrition

./: .gitignore  README.md  justfile  recreate_guide.md  verify_api.py  verify_search.py
.github/workflows/: backend.yml  terraform.yml
backend/: .env.example  database.py  main.py  meal_generator.py  models.py  pyproject.toml  requirements.txt  seed_foods.py  seed_from_api.py  test_gen.py  verify_db_content.py
backend/integrations/: openfoodfacts.py  usda.py
backend/routes/: food.py  food_search.py  onboarding.py
backend/services/: food_service.py  openfoodfacts_client.py  usda_client.py
backend/tests/: test_onboarding.py
docs/: database_schema.md
mobile/: package-lock.json  package.json
mobile/app/: _layout.tsx  index.tsx  onboarding.tsx  plan.tsx
mobile/constants/: Colors.ts  Config.ts
terraform/: backend.tf  main.tf  outputs.tf  variables.tf
